# dual_sense_hid

./: .gitignore  .lgtm.yml  CMakeLists.txt  LICENSE  README.md  annotated.html  calibration_8hpp.html  classdual__sense_1_1Gamepad.html  classdual__sense__hid_1_1Gamepad.html  classdual__sense__hid_1_1Gamepad_1_1Lights.html  device__info_8hpp.html  dir_41172f184345721d5e0e578db75c0789.html  dir_b51da00286192f6dfc71909c780b5803.html  dual_sense_hidConfig.cmake.in  enums_8hpp.html  files.html  flake.nix  gamepad_8hpp.html  index.html  modules.html  namespacedual__sense.html  namespacedual__sense__hid.html  namespaces.html  pages.html  searchdata-v1.js  searchdata-v2.js  state_8hpp.html  structdual__sense_1_1Calibration.html  structdual__sense_1_1Calibration_1_1Accelerometer.html  structdual__sense_1_1Calibration_1_1Gyroscope.html  structdual__sense_1_1DeviceInfo.html  structdual__sense_1_1State.html  structdual__sense_1_1State_1_1Acceleration.html  structdual__sense_1_1State_1_1AnalogPad.html  structdual__sense_1_1State_1_1Audio.html  structdual__sense_1_1State_1_1Battery.html  structdual__sense_1_1State_1_1ButtonPad.html  structdual__sense_1_1State_1_1Buttons.html  structdual__sense_1_1State_1_1Gyro.html  structdual__sense_1_1State_1_1TouchPoint.html  (+15 more)
.github/workflows/: codeql.yml  docs.yml  nix.yml  ubuntu.yml
cmake/: Findhidapi.cmake
docs/: Doxyfile
example/: CMakeLists.txt  led_effects.cpp  print_state.cpp
include/: device_info.hpp  enums.hpp  gamepad.hpp  helper.hpp  state.hpp
include/dual_sense/: calibration.hpp  enums.hpp  gamepad.hpp  state.hpp
include/dual_sense/detail/: helper.hpp  report.hpp
include/dual_sense_hid/: calibration.hpp  device_info.hpp  enums.hpp  gamepad.hpp  state.hpp
include/dual_sense_hid/detail/: crc32.hpp  helper.hpp  report_input.hpp  report_output.hpp
src/: gamepad.cpp
src/detail/: crc32.cpp
test/: CMakeLists.txt  crc32_test.cpp
